--- a/index.html
+++ b/index.html
@@ -1,24 +1,44 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Something</title>
+    <title>To do list</title>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <div class="js-clock">
-      <h1>00:00</h1>
+    <div class="main__align">
+      <div class="js-clock">
+        <h1>00:00</h1>
+      </div>
+      <form class="js-form form">
+        <input
+          type="text"
+          placeholder="What is your name?"
+          onfocus="this.placeholder=''"
+          onblur="this.placeholder='What is your name?'"
+        />
+      </form>
+      <h4 class="js-greetings greetings"></h4>
+      <form class="js-toDoForm">
+        <input
+          type="text"
+          placeholder="write a to do"
+          onfocus="this.placeholder=''"
+          onblur="this.placeholder='write a to do'"
+        />
+      </form>
+      <div class="list-align">
+        <ul class="js-toDoList toDoList"></ul>
+      </div>
     </div>
-    <form class="js-form form">
-      <input type="text" placeholder="What is your name?" />
-    </form>
-    <h4 class="js-greetings greetings"></h4>
-    <form class="js-toDoForm">
-      <input type="text" placeholder="write a to do" />
-    </form>
-    <ul class="js-toDoList"></ul>
+
+    <span class="js-weather weather"></span>
+
     <script src="clock.js"></script>
     <script src="greeting.js"></script>
     <script src="todo.js"></script>
+    <script src="bg.js"></script>
+    <script src="weather.js"></script>
   </body>
 </html>
