--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
       <form class="js-toDoForm">
         <input
           type="text"
-          placeholder="write a to do"
+          placeholder="Write A To Do Here"
           onfocus="this.placeholder=''"
-          onblur="this.placeholder='write a to do'"
+          onblur="this.placeholder='Write A To Do Here'"
         />
       </form>
       <div class="list-align">
